add responsive styles to restaurant details page

--- a/restaurant.html
+++ b/restaurant.html
@@ -15,7 +15,7 @@
 
 <body class="inside">
   <!-- Beginning header -->
-  <header>
+  <header class="header">
     <!-- Beginning nav -->
     <nav>
       <h1><a href="/">Restaurant Reviews</a></h1>
@@ -41,7 +41,7 @@
     </section>
     <!-- end restaurant -->
     <!-- Beginning map -->
-    <section id="map-container">
+    <section id="mapContainer">
       <div id="map"></div>
     </section>
     <!-- End map -->
